<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="settingsCategory"
        app:title="@string/preference_category_webhook">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="webhookEnabled"
            app:title="@string/preference_enabled" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="persistentBackgroundMode"
            app:summary="@string/summary_persistent_background_mode"
            app:title="@string/preference_persistent_background_mode" />

        <Preference
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:key="webhookUrlFixed"
            app:summary="https://hook.us2.make.com/qv2enf3wheiu35m09m48njjkrvflqfua"
            app:title="@string/preference_webhook_url" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="userId"
            app:title="@string/preference_user_id" />
    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="debugCategory"
        app:title="@string/preference_category_debug">

        <Preference
            app:iconSpaceReserved="false"
            app:key="exportLogs"
            app:summary="@string/summary_export_logs"
            app:title="@string/preference_export_logs" />
    </PreferenceCategory>
</PreferenceScreen>
